# hse-python

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .shellcheckrc  CONTRIBUTING.md  MANIFEST.in  README.md  _pyproject.toml  docstrings.py  docstrings.toml  meson.build  meson_options.txt  pp.py  putbin.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.ignore.yaml  black.yaml  builds.ignore.yaml  builds.yaml  cancel.yaml  checkoss.yaml  ci.yaml  cleanup.yaml  flake8.ignore.yaml  flake8.yaml  isort.ignore.yaml  isort.yaml  pylint.ignore.yaml  pylint.yaml  reuse.yaml  shellcheck.ignore.yaml  shellcheck.yaml  validate_build.yaml
.reuse/: dep5
cross/: common.ini  s390x.ini
hse/: __init__.py  experimental.in.pyi  experimental.in.pyx  experimental.pxd  hse.in.pyi  hse.in.pyx  hse.pxd  hse.pyi  hse.pyi.in  hse.pyx  hse.pyx.in  hse_experimental.in.pyx  hse_experimental.pxd  hse_limits.in.pyx  hse_limits.pxd  hse_limits.pyx.in  limits.in.pyi  limits.in.pyx  limits.pxd  limits.pyi.in  meson.build  py.typed  version.pxd
hse2/: __init__.py  hse.in.pyi  hse.in.pyx  hse.pxd  limits.in.pyi  limits.pxd  meson.build  version.in.pyi  version.in.pyx  version.pxd
hse3/: __init__.py  hse.in.pyi  hse.in.pyx  hse.pxd  limits.in.pyi  limits.in.pyx  limits.pxd  meson.build  version.in.pyi  version.in.pyx  version.pxd
packaging/: python3-hse.spec
samples/: ex1_create.py  ex2_simple_ops.py  ex3_cursor.py  ex4_transactions.py  ex5_large_val.py  ex6_error_handling.py  ex7_configuration.py
scripts/: checkoss  checkoss-ignore-words.txt
scripts/dev/: checkoss-ignore-words.txt  shellcheck.sh
subprojects/: hse.wrap
test/: config.yaml  conftest.py  meson.build  test_cursor.py  test_experimental.py  test_hse.py  test_kvdb.py  test_kvs.py  test_limits.py  test_params.py
tests/: common.py  conftest.py  meson.build  test-runner  test_cursor.py  test_experimental.py  test_hse.py  test_kvdb.py  test_kvs.py  test_limits.py  test_transaction.py  test_version.py
