option('tests', type: 'boolean', value: true,
	description: 'Build tests')
option('use-cython', type: 'boolean', value: true,
	description: 'Enable for bootstrapped builds')
option('hse-lib-dir', type: 'string', value: '',
	description: 'Directory containing the HSE shared library (Only useful for the hse repository)')
