option('experimental', type: 'boolean', value: true,
    description: 'Enable support for the experimental API')
option('tests', type: 'boolean', value: true,
    description: 'Build tests')
option('tests-dir', type: 'string', value: '',
    description: 'Directory for pre-creating home directories')
