# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# SPDX-FileCopyrightText: Copyright 2020 Micron Technology, Inc.

option('experimental', type: 'boolean', value: true, yield: true,
    description: 'Enable support for the experimental API')
option('tests', type: 'boolean', value: true,
    description: 'Build tests')
