[build-system]
requires = ["mesonpep517", "toml", "Cython", "pytest", "pytest-tap"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author = "Micron Technology, Inc."
summary = "Fast key-value storage for SSDs and persistent memory"
description-file = "README.md"
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Cython",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Database",
	"Topic :: Database :: Database Engines/Servers",
	"Typing :: Typed",
]
requires-python = ">=3.6"
home-page = "https://github.com/hse-project/hse-python"
project-urls = [
	"HSE, https://github.com/hse-project/hse",
	"Issue Tracker, https://github.com/hse-project/hse-python",
]
module = "hse"
meson-options = [
	"-Dtests=false",
]
