[project]
name = "hse-python" # https://gitlab.com/thiblahute/mesonpep517/-/issues/16
version = "2.0.0"
description = "Fast key-value storage for SSDs and persistent memory"
authors = [{ name = "Micron Technology" }]
maintainers = [{ name = "Micron Technology" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.6"
# https://gitlab.com/thiblahute/mesonpep517/-/issues/15
# keywords = [
	# "micron",
	# "hse",
	# "bindings",
	# "heterogeneous-memory",
	# "storage",
	# "engine",
# ]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Cython",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Database",
	"Topic :: Database :: Database Engines/Servers",
	"Typing :: Typed",
]

[project.urls]
HSE = "https://hse-project.github.io/"
Repository = "https://github.com/hse-project/hse-python"

[project.optional-dependencies]
formatting = [
	"black >= 20.8b1",
]

[build-system]
requires = [
	"meson >= 0.58.2",
	"ninja >= 1.10.0",
	"git+https://gitlab.com/thiblahute/mesonpep517@master#egg=mesonpep517",
	"build >= 0.5.1",
	"Cython >= 0.29.23",
	"pytest >= 6.2.4",
	"pytest-tap >= 3.2",
]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
meson-options = [
	"-Dtests=false",
]
